--- a/2_rsdata/src/3_flat_overpasses.html
+++ b/2_rsdata/src/3_flat_overpasses.html
@@ -385,11 +385,16 @@ $(document).ready(function () {
 library(feather)
 library(googledrive)
 library(tidyverse)</code></pre>
+<pre><code>## Registered S3 methods overwritten by &#39;ggplot2&#39;:
+##   method         from 
+##   [.quosures     rlang
+##   c.quosures     rlang
+##   print.quosures rlang</code></pre>
 <pre><code>## -- Attaching packages -------------------------------------------------------------------- tidyverse 1.2.1 --</code></pre>
-<pre><code>## v ggplot2 3.1.1       v purrr   0.3.2  
-## v tibble  2.1.1       v dplyr   0.8.0.1
-## v tidyr   0.8.3       v stringr 1.4.0  
-## v readr   1.3.1       v forcats 0.4.0</code></pre>
+<pre><code>## v ggplot2 3.1.1     v purrr   0.3.2
+## v tibble  2.1.3     v dplyr   0.8.1
+## v tidyr   0.8.3     v stringr 1.4.0
+## v readr   1.3.1     v forcats 0.4.0</code></pre>
 <pre><code>## -- Conflicts ----------------------------------------------------------------------- tidyverse_conflicts() --
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
@@ -514,7 +519,6 @@ wqp.pull &lt;- bind_rows(wqp.pull.same,wqp.pull.plus1,wqp.pull.minus1)
 data_file &lt;- &#39;2_rsdata/out/wide_pull.feather&#39;
 write_feather(wqp.pull,path=data_file)
 gd_put(scipiper::as_ind_file(data_file), data_file)</code></pre>
-<pre><code>## Auto-refreshing stale OAuth token.</code></pre>
 </div>
 </div>
 
